link_libraries(muduo)

add_executable(Timestamp_unittest Timestamp_unittest.cpp)
add_executable(Exception_unittest Exception_unittest.cpp)
add_executable(Thread_unittest Thread_unittest.cpp)
add_executable(countdownLatch_unittest1 countdownLatch_unittest1.cpp)
add_executable(countdownLatch_unittest2 countdownLatch_unittest2.cpp)